--- a/config/_default/_languages.toml
+++ b/config/_default/_languages.toml
@@ -4,3 +4,20 @@ languageName = "English"
 languagedirection = "ltr"
 title = "Example Site"
 weight = 1
+
+[en.menu]
+
+  [[en.menu.main]]
+  name = "Home"
+  url = "/"
+  weight = 1
+  [en.menu.main.params]
+  icon = "home"
+
+
+  [[en.menu.main]]
+  name = "Blog"
+  url = "/blog/"
+  weight = 2
+  [en.menu.main.params]
+  icon = "post"
